Allow the team size and number of rounds to be configured in the lobby.